feat: 新增样式mixin和更新variable

--- a/packages/__assets/variable.scss
+++ b/packages/__assets/variable.scss
@@ -1,3 +1,5 @@
+/*** Color ***/
+
 $primary: #4391ff;
 $primary-light: #40a9ff;
 $primary-dark: #337ab7;
@@ -9,3 +11,10 @@ $info: #e6e6e6;
 $gray: #b2b2b2;
 
 $color-border: #dedede;
+
+/*** Font ****/
+
+$font-size-base: 14px;
+
+/**** Grid ****/
+$grid-columns: 24;
